name:                hspec-wai-servant
version:             0.1.0.0
synopsis: servant-client generation for hspec-wai
description: Automatically generate functions to call your servant API in Test.Hspec.Wai-style tests
license:             BSD3
license-file:        LICENSE
author:              Armando Ramirez
maintainer:          armando.m.ramirez@gmail.com
homepage: https://github.com/ramirez7/hspec-wai-servant
bug-reports: https://github.com/ramirez7/hspec-wai-servant/issues
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:
    Test.Hspec.Wai.Servant
    Test.Hspec.Wai.Servant.Assertions
    Test.Hspec.Wai.Servant.Client
    Test.Hspec.Wai.Servant.Types
  ghc-options: -Wall
  build-depends:
      base >=4.9 && <4.13
    , hspec-wai
    , hspec-expectations
    , wai-extra
    , bytestring
    , bytestring-conversion
    , case-insensitive
    , http-types
    , http-media
    , text
    , mtl
    , servant
    , servant-checked-exceptions < 2.0.0.0
  hs-source-dirs:      src

test-suite spec
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base >=4.9 && <4.12
    , aeson
    , hspec
    , servant
    , servant-server
    , bytestring
    , text
    , wai
    , mtl
    , hspec-wai-servant
  other-modules:
    ClientSpec

source-repository head
  type: git
  location: https://github.com/ramirez7/hspec-wai-servant.git
